@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.buggalo" name="Buggalo Exception Collector" version="1.1.7" provider-name="twinther, schapplm">
+<addon id="script.module.buggalo" name="Buggalo Exception Collector" version="1.1.8" provider-name="twinther, schapplm">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
